--- a/essays/2015-08-26.md
+++ b/essays/2015-08-26.md
@@ -1,22 +1,15 @@
 ---
 layout: essay
 type: essay
-title: Igniting the fire
-date: 2015-08-26
+title: Booting up: story of my life
+date: 2016-08-28
 labels:
   - Software Engineering
   - Learning
 ---
 
-<img class="ui tiny left circular floated image" src="../images/paintbrushes.jpg">
+My software engineering career begins in January of 2010. Before that point, I wanted to be a pilot, and before that a science fiction writer. However, my high school's robotics team needed a temporary driver, and I was called over. From that day on, I got hooked on making machines go. I love the logical progression of code, how it all makes perfect sense in its own convoluted way. With code, there is no judgement call - either the code works, or it doesn't. Either it's optimized enough, or it isn't. All this is a perfect fit for my thought processes, so I have decided to go into software engineering.
 
-Ever since I first grasped a paintbrush, I’ve always been eager to learn about design. Design is such a complex concept. For example, when looking at abstract art, its meaning can be completely different for different people. It motivates a person to think thoughtfully and has the potential to submerge them in a sea of imagination. It’s that special relationship between the viewer and the art that makes something as technical as software engineering interesting to me.
+I'd like to be a software developer on high-tech new projects, likely in human-computer interaction fields. Closing the gap between humans and computers is my dream - I'd like to beat the Turing test once and for all. For those who are into comic books but don't have the specific technical background, my usual description is that I want to create Jarvis, the intelligent and hyper-powerful AI who powers the Iron Man suits (and many, many other things).
 
-<img class="ui tiny left circular floated image" src="../images/design-technology.jpg">
-
-I never used to think that design and technology went hand in hand.  Thus, learning about software engineering and the role of design has been incredibly interesting to me. Design, implementation, and management are just some of the many things I wish to learn more about. Good art, in a way, makes a person question it. They become joined in the idea of visualization – where captivation meets inspiration.
-
-<img class="ui tiny left circular floated image" src="../images/software-code.jpg">
-
-I am now starting to take a Software Engineering class. I hope to learn a lot through the course, but I know it will be just the beginning of my journey. By the time I’m done with it, I hope I’ve learned enough to take the next step in my life as a developer. But until then, my fire will keep on burning.
-
+I'm somewhat worried about the "robot takeover" scenario, where AI gets out of our control. But I believe that a properly trained and built AI will have enough understanding and compassion to be a successful evolutionary step aiding humankind, not a doomsday machine. Of course, whether humans are collectively capable of peaceful existence in a world of total integration with robots has yet to be decided.
