--- a/essays/2015-08-26.md
+++ b/essays/2015-08-26.md
@@ -1,7 +1,7 @@
 ---
 layout: essay
 type: essay
-title: Booting up: story of my life
+title: Booting up, a story of my life
 date: 2016-08-28
 labels:
   - Software Engineering
